fixed a bug not showing that u lost and added font face

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,9 @@
-@import url('http://fonts.cdnfonts.com/css/playsir');
+@font-face {
+    font-family: 'PLAYSIR';
+    font-style: normal;
+    font-weight: 400;
+    src: local('PLAYSIR'), url('https://fonts.cdnfonts.com/s/32372/PLAYSIR Regular.woff') format('woff');
+}
 
 
 .container {
